[gd_scene load_steps=5 format=2]

[ext_resource path="res://gui/gui_ninepatch.png" type="Texture" id=1]
[ext_resource path="res://gui/inventory/base_inventory.gd" type="Script" id=2]
[ext_resource path="res://gui/inventory/inventory_slot.tscn" type="PackedScene" id=4]
[ext_resource path="res://gui/inventory/player_inventory.gd" type="Script" id=6]

[node name="DefaultInventory" type="NinePatchRect"]
margin_right = 336.0
margin_bottom = 160.0
rect_min_size = Vector2( 336, 160 )
mouse_filter = 0
texture = ExtResource( 1 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 16
patch_margin_bottom = 16
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 328.0
margin_bottom = 152.0
custom_constants/separation = 8

[node name="PlayerInventory" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 144.0
custom_constants/separation = 8
script = ExtResource( 6 )

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/PlayerInventory"]
margin_right = 320.0
margin_bottom = 104.0
columns = 9

[node name="InventorySlot10" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]

[node name="InventorySlot11" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_left = 36.0
margin_right = 68.0

[node name="InventorySlot12" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_left = 72.0
margin_right = 104.0

[node name="InventorySlot13" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_left = 108.0
margin_right = 140.0

[node name="InventorySlot14" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_left = 144.0
margin_right = 176.0

[node name="InventorySlot15" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_left = 180.0
margin_right = 212.0

[node name="InventorySlot16" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_left = 216.0
margin_right = 248.0

[node name="InventorySlot17" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_left = 252.0
margin_right = 284.0

[node name="InventorySlot18" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_left = 288.0
margin_right = 320.0

[node name="InventorySlot19" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_top = 36.0
margin_bottom = 68.0

[node name="InventorySlot20" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_left = 36.0
margin_top = 36.0
margin_right = 68.0
margin_bottom = 68.0

[node name="InventorySlot21" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_left = 72.0
margin_top = 36.0
margin_right = 104.0
margin_bottom = 68.0

[node name="InventorySlot22" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_left = 108.0
margin_top = 36.0
margin_right = 140.0
margin_bottom = 68.0

[node name="InventorySlot23" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_left = 144.0
margin_top = 36.0
margin_right = 176.0
margin_bottom = 68.0

[node name="InventorySlot24" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_left = 180.0
margin_top = 36.0
margin_right = 212.0
margin_bottom = 68.0

[node name="InventorySlot25" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_left = 216.0
margin_top = 36.0
margin_right = 248.0
margin_bottom = 68.0

[node name="InventorySlot26" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_left = 252.0
margin_top = 36.0
margin_right = 284.0
margin_bottom = 68.0

[node name="InventorySlot27" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_left = 288.0
margin_top = 36.0
margin_right = 320.0
margin_bottom = 68.0

[node name="InventorySlot28" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_top = 72.0
margin_bottom = 104.0

[node name="InventorySlot29" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_left = 36.0
margin_top = 72.0
margin_right = 68.0
margin_bottom = 104.0

[node name="InventorySlot30" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_left = 72.0
margin_top = 72.0
margin_right = 104.0
margin_bottom = 104.0

[node name="InventorySlot31" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_left = 108.0
margin_top = 72.0
margin_right = 140.0
margin_bottom = 104.0

[node name="InventorySlot32" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_left = 144.0
margin_top = 72.0
margin_right = 176.0
margin_bottom = 104.0

[node name="InventorySlot33" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_left = 180.0
margin_top = 72.0
margin_right = 212.0
margin_bottom = 104.0

[node name="InventorySlot34" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_left = 216.0
margin_top = 72.0
margin_right = 248.0
margin_bottom = 104.0

[node name="InventorySlot35" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_left = 252.0
margin_top = 72.0
margin_right = 284.0
margin_bottom = 104.0

[node name="InventorySlot36" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer" instance=ExtResource( 4 )]
margin_left = 288.0
margin_top = 72.0
margin_right = 320.0
margin_bottom = 104.0

[node name="GridContainer2" type="GridContainer" parent="MarginContainer/VBoxContainer/PlayerInventory"]
margin_top = 112.0
margin_right = 320.0
margin_bottom = 144.0
columns = 9

[node name="InventorySlot1" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer2" instance=ExtResource( 4 )]

[node name="InventorySlot2" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer2" instance=ExtResource( 4 )]
margin_left = 36.0
margin_right = 68.0

[node name="InventorySlot3" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer2" instance=ExtResource( 4 )]
margin_left = 72.0
margin_right = 104.0

[node name="InventorySlot4" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer2" instance=ExtResource( 4 )]
margin_left = 108.0
margin_right = 140.0

[node name="InventorySlot5" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer2" instance=ExtResource( 4 )]
margin_left = 144.0
margin_right = 176.0

[node name="InventorySlot6" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer2" instance=ExtResource( 4 )]
margin_left = 180.0
margin_right = 212.0

[node name="InventorySlot7" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer2" instance=ExtResource( 4 )]
margin_left = 216.0
margin_right = 248.0

[node name="InventorySlot8" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer2" instance=ExtResource( 4 )]
margin_left = 252.0
margin_right = 284.0

[node name="InventorySlot9" parent="MarginContainer/VBoxContainer/PlayerInventory/GridContainer2" instance=ExtResource( 4 )]
margin_left = 288.0
margin_right = 320.0

[connection signal="resized" from="MarginContainer" to="." method="_on_MarginContainer_resized_or_sort_children"]
[connection signal="sort_children" from="MarginContainer" to="." method="_on_MarginContainer_resized_or_sort_children"]
